--- a/style.css
+++ b/style.css
@@ -11,28 +11,41 @@ body{
 }
 .nav_top{
     width: 100vw;
-    height: 12vh;
-    background-color: red;
-    position: fixed;
+    height: 100px;
+    background-image: url(https://pokedex.sleduardo.dev/img/logo.svg);
 }
 .title{
     font-family: 'Gill Sans', 'Gill Sans MT', sans-serif;
     text-align: center;
-    margin: 3vh auto;
     font-size: 2.5em;
+    padding: 20px;
 }
-.container{
-    width: 30vw;
-    height: 100vh;
-    background-color: aliceblue;
-    float: left;
+.nav_left{
+    background-color: gray;
+    width: 25%;
+    height: 90vh;
+    text-align: center;
+    position: fixed;
 }
-.mid{
-    display: inline-block;
-    border: none;
+.box_left{
+   margin-top: 150px;
 }
-.left{
-    background-color: #680000;
-    width: 70px;
-    height: 100px;
+.title_pokedex{
+    margin-bottom: 32px;
+    color: #fff;
+    font-size: 36px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.link{
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-decoration: none;
+}
+.link:hover{
+    color: red;
+}
+p{    
+    margin-top: 40px;
 }
