--- a/style.css
+++ b/style.css
@@ -4,42 +4,50 @@
     box-sizing: border-box;
 }
 body{
+    position: fixed;
     width: 100vw;
     height: 100vh;
-    margin: 0;
-    background-color: lightgray;
-}
-.nav_top{
-    width: 100vw;
-    height: 100px;
-    background-image: url(https://pokedex.sleduardo.dev/img/logo.svg);
-}
-.title{
-    font-family: 'Gill Sans', 'Gill Sans MT', sans-serif;
-    text-align: center;
-    font-size: 2.5em;
-    padding: 20px;
-}
-.nav_left{
     background-color: gray;
-    width: 25%;
-    height: 90vh;
-    text-align: center;
-    position: fixed;
-}
-.box_left{
-   margin-top: 150px;
-}
-.title_pokedex{
-    margin-bottom: 32px;
-    color: #fff;
-    font-size: 36px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav_top{
+    width: 100vw;
+    height: 100px;
+}
+.title{
+    margin-top: 18px;
+    text-align: center;
+    padding: 50px;
+    background-image: url(https://pokedex.sleduardo.dev/img/logo.svg);
+    background-repeat: no-repeat;
+    background-size: 200px;
+    background-position: center;
+}
+.nav_left{
+    background-color: lightgray;
+    width: 450px;
+    height: 70vh;
+    text-align: center;
+    margin-left: 70px;
+    position: fixed;
+}
+.box_left{
+   margin-top: 90px;
+}
+.box_mid{
+    margin-left: 600px;
+    height: 70vh;
+    width: 60vw;
+    background-color: lightgray;
+}
+.title_pokedex{
+    margin-bottom: 32px;
+    color: black;
+    font-size: 36px;
+}
 .link{
-    color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    color: black;
     font-size: 30px;
     text-decoration: none;
 }
@@ -48,4 +56,44 @@ body{
 }
 p{    
     margin-top: 40px;
+}
+footer{
+    text-align: center;
+    margin-top: 120px;
+}
+.numero{
+    padding-top: 15px;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+}
+.nome{
+    margin-top: 15px;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+}
+.img_tipo{
+    margin-top: 50px;
+    text-align: center;
+}
+.tipo{
+    background-color: #4bb7ff;
+    width: 400px;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+    font-size: 26px;
+    color: black;
+    font-weight: 700;
+}
+.tipo_2{
+    background-color: yellow;
+    width: 400px;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+    font-size: 26px;
+    color: black;
+    font-weight: 700;
 }
